fix(dashboard): z-index

--- a/src/features/dashboard/DashboardGrid.scss
+++ b/src/features/dashboard/DashboardGrid.scss
@@ -2,4 +2,5 @@
 
 .layout{
   margin-top: 60px;
+  z-index: 770;
 }
