--- a/src/features/dashboard/DashboardToolbar.scss
+++ b/src/features/dashboard/DashboardToolbar.scss
@@ -7,6 +7,7 @@
   top: 0px;
   height: 50px;
   background-color: theme-color('secondary');
+  z-index: 778;
   color: theme-color('light');
 
   .nav-item {
