--- a/src/features/home/Page.scss
+++ b/src/features/home/Page.scss
@@ -9,7 +9,7 @@
   position: fixed;
   left: 0px;
   top: 0px;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .fond-siteAuth {
@@ -17,5 +17,5 @@
   position: fixed;
   left: 0px;
   top: 0px;
-  opacity: 0.15;
+  opacity: 0.10;
 }
